<resources>
    <string name="app_name">ICHI Software</string>
    <string name="reg">Roboto-Regular.ttf</string>
    <string name="str_something_went_wrong">Something went wrong</string>
    <string name="signin">Login</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget password?</string>
    <string name="what_you_want">What do you want to do?</string>
    <string name="inspection_details">Inspection Report</string>
    <string name="inspection_order">Inspection Details</string>
    <string name="current">Current</string>
    <string name="pending">Pending</string>

    <string name="buyer_name">Buyer Name</string>
    <string name="inspection_no">Inspection No</string>
    <string name="inspection_note">Inspection Note</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="city">City</string>
    <string name="orderno">Order No:</string>
    <string name="clientinfo">Client Info</string>
    <string name="buyer_agent">Buyer Agent</string>
    <string name="listing_agent">Listing Agent</string>
    <string name="property_info">Property Info</string>
    <string name="scheduler">Scheduler</string>
    <string name="fees">Fees</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="payment">Payment</string>

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="agentname">Agent Name</string>
    <string name="agencyname">Agency Name</string>
    <string name="cellphone">Cell Phone</string>
    <string name="workemail">Work Email</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="building_type">Building Type</string>
    <string name="square_footage">Square Footage</string>
    <string name="occupied">Occupied</string>
    <string name="water">Water</string>
    <string name="gas">Gas</string>
    <string name="other_utility">Other Utility</string>
    <string name="power">Power</string>
    <string name="bed_rooms">Bed Rooms</string>
    <string name="bath_rooms">Bath Rooms</string>
    <string name="who_placed_order">Who Placed Order</string>
    <string name="number_of_slot">Number of slot</string>
    <string name="inspector">Inspector</string>
    <string name="special_request">Spcial Request</string>
    <string name="access">Access</string>
    <string name="access_code">Access Code</string>
    <string name="agent_attending">Agent Attending</string>
    <string name="buyer_attending">Buyer Attending</string>
    <string name="locale">Locale</string>
    <string name="inspect_agreement">Inspect Agreement</string>
    <string name="referred_by">Referred By</string>
    <string name="home">Home</string>
    <string name="townhouse">Townhouse</string>
    <string name="condo">Condo</string>
    <string name="pool_or_spa">Pool or Spa</string>
    <string name="pool_and_spa">Pool and Spa</string>
    <string name="termite">Termite</string>
    <string name="trip_charge">Trip Charge</string>
    <string name="age_fee">Age Fee</string>
    <string name="guest_house">Guest House</string>
    <string name="other">Other</string>
    <string name="re_inspection">Re-inspection</string>
    <string name="duplex">Duplex</string>
    <string name="triplex">Triplex</string>
    <string name="four_plex">4-Plex</string>
    <string name="discount">Discount</string>
    <string name="saved_total">Saved Total</string>
    <string name="payments_made">Payments Made</string>
    <string name="total">Total</string>
    <string name="cross_street">Cross Streets</string>
    <string name="yearbuilt">Year Built</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="check_information">Check Information</string>
    <string name="number">Number</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="card_type">Card Type</string>
    <string name="name_on_card">Name On Card</string>
    <string name="experation_date">Expiration Date</string>
    <string name="csc">CSC #</string>
    <string name="authorization_code">Authorization Code</string>
    <string name="save">Save</string>


    <string name="str_email_is_not_valid">Email is not valid!</string>
    <string name="str_pass_is_not_valid">Password is not valid!</string>
    <string name="str_pass_length_is_not_valid">Password must be at least 5 chars long!</string>
    <string name="str_pass_does_not_match">Password does not match!</string>
    <string name="internet_not_avail">Internet is not available. Please try later.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="str_no_data">No Data Available</string>
    <string name="inspections_title">Inspections</string>
    <string name="write_here">Write here</string>
    <string name="add_template">Add Template</string>
    <string name="add_a_section">Add a Section</string>
    <string name="select_section">Select Section</string>
    <string name="mark_all_lines">Mark All Lines</string>
    <string name="edit_name">EDIT NAME</string>
    <string name="rename_name">Rename Name</string>
    <string name="add_new_line">Add New Line</string>
    <string name="generate_report">Upload Orders</string>

    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_camera_rationale">Camera permission is needed to proceed further.</string>
    <string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the Camera!</string>
    <string name="permission_camera_never_askagain">Camera permission was denied with never ask again.</string>
    <string-array name="type">
        <item>xyzxyz</item>
        <item>xyzxyz</item>
        <item>xyzxyz</item>
        <item>xyzxyz</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_section">Remove Section</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_image_avail">No image selected yet!</string>
    <string name="username">Username</string>
    <string name="Instructions">Instructions</string>
</resources>
