<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/rlContainer"
                                    xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/values_16"
                                    android:layout_marginRight="@dimen/values_16"
                                    android:clickable="true"
                                    android:layout_marginTop="@dimen/values_16"
                                    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/values_12">

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/txtBuyerName"
            style="@style/txt_reg_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/buyer_name"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/tvBuyerName"
            style="@style/txt_reg_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtBuyerName"
            android:text="Eric Roger"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/txtInspectionNo"
            style="@style/txt_reg_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvBuyerName"
            android:layout_marginTop="@dimen/values_12"
            android:text="@string/inspection_no"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/tvInspectionNo"
            style="@style/txt_reg_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtInspectionNo"
            android:text="07527"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/txtCity"
            style="@style/txt_reg_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtInspectionNo"
            android:layout_alignParentRight="true"
            android:text="@string/city"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/tvCity"
            style="@style/txt_reg_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtCity"
            android:text="Vadodara"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/txtDate"
            style="@style/txt_reg_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvInspectionNo"
            android:layout_marginTop="@dimen/values_12"
            android:text="@string/date"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/tvDate"
            style="@style/txt_reg_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtDate"
            android:text="16/03/2017"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/txtTime"
            style="@style/txt_reg_12_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtDate"
            android:layout_alignParentRight="true"
            android:text="@string/time"/>

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/tvTime"
            style="@style/txt_reg_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtDate"
            android:text="08:30"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>