<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.ichi.inspection.app.activities.StartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_bg"
            android:visibility="visible" />

        <com.ichi.inspection.app.utils.CustomTextView
            android:id="@+id/txtClientInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/txt_reg_18_black"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/values_16"
            android:layout_marginTop="@dimen/values_28"
            android:clickable="true"
            android:focusable="false"
            android:text="@string/clientinfo" />
        <!--First Name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtFirstName"
            android:layout_below="@+id/txtClientInfo"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/values_16"
            android:layout_marginTop="@dimen/values_10"
            android:layout_height="wrap_content">

            <com.ichi.inspection.app.utils.CustomEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/firstname"
                android:enabled="false"
                android:paddingTop="5dp"
                android:text="Eric"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/values_txt_14"/>

        </android.support.design.widget.TextInputLayout>

        <!--Last Name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLastName"
            android:layout_below="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/values_16"
            android:layout_marginTop="@dimen/values_10"
            android:layout_height="wrap_content">

            <com.ichi.inspection.app.utils.CustomEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/lastname"
                android:enabled="false"
                android:paddingTop="5dp"
                android:text="Roger"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/values_txt_14"/>

        </android.support.design.widget.TextInputLayout>

        <!--Phone-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPhone"
            android:layout_below="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/values_16"
            android:layout_marginTop="@dimen/values_10"
            android:layout_height="wrap_content">

            <com.ichi.inspection.app.utils.CustomEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone"
                android:enabled="false"
                android:paddingTop="5dp"
                android:text="222222222"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/values_txt_14"/>

        </android.support.design.widget.TextInputLayout>

        <!--Email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_below="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/values_16"
            android:layout_marginTop="@dimen/values_10"
            android:layout_height="wrap_content">

            <com.ichi.inspection.app.utils.CustomEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:enabled="false"
                android:paddingTop="5dp"
                android:text="Eric"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/values_txt_14"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>